Beta 1.16.5-0.1.0 -Ported from 1.19.4-1.3 -Removed Raw Ore Upgrade(Obvious reasons) -Fixed the crafting related to amethyst and copper to use tags -Added betterfurnacesreforged:furnace_like tag -Fixed energy items infinitely charging when used in furnace or forge fuel slot -and a lot of minor changes to work in 1.16.5...